Updated stats and finished the HGAM.

--- a/PanArctic_DSL_statistics.Rmd
+++ b/PanArctic_DSL_statistics.Rmd
@@ -79,30 +79,20 @@ I combine data using the EASE-Grid 2.0 North (EPSG:6931) and normalize the covar
 
 ```{r combine-data}
 SA_laea <- SA_grid_laea %>%  # Tidy anomaly dataset for joining
-  dplyr::select(-lat, -lon) %>%
-  filter(empty == F)
+  dplyr::select(-lat, -lon) %>% 
+   filter(empty_clean == F) # Select cells with DSL
 phy_laea <- phy_grid_laea %>% # Tidy remote sensing dataset for joining
-  dplyr::select(-lat, -lon)
+  dplyr::select(year, area, xc, yc, cell_res, depth, thetao, velocity)
 seaice_laea <- seaice_grid_laea %>%
-  dplyr::select(-lat, -lon)
+  dplyr::select(year, area, xc, yc, cell_res, openwater_duration, ice_week)
 
 stat_laea <- left_join(SA_laea, phy_laea, by = c("year", "area", "xc", "yc", "cell_res")) %>% # Join acoustic and physics
   left_join(., seaice_laea, by = c("year", "area", "xc", "yc", "cell_res")) %>%
   # For cells that have NaN, get the mean of the surrounding cells
   rowwise() %>%
-  mutate(xc_na = if_else(is.na(mean_ice_conc) == T, xc, NaN),
-         yc_na = if_else(is.na(mean_ice_conc) == T, yc, NaN),
-         year_na = if_else(is.na(mean_ice_conc) == T, year, NaN), 
-         mean_ice_conc = if_else(is.na(mean_ice_conc) == T, mean(pull(subset(seaice_grid_laea,
-                                                                             xc >= xc_na - 50 &
-                                                                               xc <= xc_na + 50 & 
-                                                                               yc >= yc_na - 50 & 
-                                                                               yc <= yc_na + 50 & 
-                                                                               year == year_na,
-                                                                             select = mean_ice_conc),
-                                                                      mean_ice_conc),
-                                                                 na.rm = T),
-                                 mean_ice_conc),
+  mutate(xc_na = if_else(is.na(openwater_duration) == T, xc, NaN),
+         yc_na = if_else(is.na(openwater_duration) == T, yc, NaN),
+         year_na = if_else(is.na(openwater_duration) == T, year, NaN), 
          openwater_duration = if_else(is.na(openwater_duration) == T, mean(pull(subset(seaice_grid_laea,
                                                                                        xc >= xc_na - 50 &
                                                                                          xc <= xc_na + 50 & 
@@ -113,16 +103,6 @@ stat_laea <- left_join(SA_laea, phy_laea, by = c("year", "area", "xc", "yc", "ce
                                                                                 openwater_duration),
                                                                            na.rm = T),
                                       openwater_duration),
-         ice_break = if_else(is.na(ice_break) == T, mean(pull(subset(seaice_grid_laea,
-                                                                     xc >= xc_na - 50 &
-                                                                       xc <= xc_na + 50 & 
-                                                                       yc >= yc_na - 50 & 
-                                                                       yc <= yc_na + 50 & 
-                                                                       year == year_na,
-                                                                     select = ice_break),
-                                                              ice_break),
-                                                         na.rm = T),
-                             ice_break),
          ice_week = if_else(is.na(ice_week) == T, mean(pull(subset(seaice_grid_laea,
                                                                    xc >= xc_na - 50 &
                                                                      xc <= xc_na + 50 & 
@@ -133,19 +113,17 @@ stat_laea <- left_join(SA_laea, phy_laea, by = c("year", "area", "xc", "yc", "ce
                                                             ice_week),
                                                        na.rm = T),
                             ice_week)) %>%
-  filter(depth == 380) %>% # Select data at 380 m depth
-  mutate(SA_int = 10 * log10(NASC_int),
-         velocity = velocity * 100, # Convert to cm/s
+  filter(depth == 380) %>% # Select data at 380 m depth and remove cells with no DSL
+  mutate(velocity = velocity * 100, # Convert to cm/s
          IHO_area = factor(case_when(IHO_area == "East Arctic Ocean" ~ "EAO",
-                                     IHO_area == "West Arctic Ocean" ~ "WAO_BF",
-                                     IHO_area == "Beaufort Sea" ~ "WAO_BF",
-                                     IHO_area == "The Northwestern Passages" ~ "CAA",
+                                     IHO_area == "West Arctic Ocean" ~ "WAO_BF_CAA",
+                                     IHO_area == "Beaufort Sea" ~ "WAO_BF_CAA",
+                                     IHO_area == "The Northwestern Passages" ~ "WAO_BF_CAA",
                                      IHO_area == "Baffin Bay" ~ "BB",
                                      IHO_area == "Davis Strait" ~ "DS"),
-                            levels = c("WAO_BF", "CAA", "BB", "DS", "EAO"))) %>%
+                            levels = c("WAO_BF_CAA", "BB", "DS", "EAO"))) %>%
   ungroup() %>%
-  dplyr::select(-vxo, -vyo, -mean_temp_area_depth, -mean_velo_area_depth, -xc_na, -yc_na, -year_na, -siconc, -sithick,
-                -temp_anomaly, -velocity_anomaly)
+  dplyr::select(-xc_na, -yc_na, -year_na)
 ```
 
 # Data exploration 
@@ -158,20 +136,8 @@ stat_laea %>%
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
   geom_point(aes(col = IHO_area)) +
   ggtitle("regions") +
-  coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
-  theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
-```
-
-```{r map-siconc, fig.height=3, fig.width=7}
-stat_laea %>% # Ice concentration
-  ggplot(aes(x = xc,  y = yc)) +
-  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  geom_tile(aes(fill = mean_ice_conc)) +
-  scale_fill_cmocean("Ice (%)", name = "ice", na.value = "red") +
-  facet_wrap(~ year, ncol = 3) +
-  ggtitle("Sea ice concentration") +
-  coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
-  theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
+  facet_wrap(~ year) +
+  coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F)
 ```
 
 ```{r map-ow, fig.height=3, fig.width=7}
@@ -182,18 +148,6 @@ stat_laea %>% # Openwater duration
   scale_fill_viridis_c("Day", option = "plasma", na.value = "red") +
   facet_wrap(~ year, ncol = 3) +
   ggtitle("Openwater duration") +
-  coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
-  theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
-```
-
-```{r map-ice-day, fig.height=3, fig.width=7}
-stat_laea %>% # Openwater duration
-  ggplot(aes(x = xc,  y = yc)) +
-  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  geom_tile(aes(fill = ice_break)) +
-  scale_fill_viridis_c("Day", option = "viridis", na.value = "red") +
-  facet_wrap(~ year, ncol = 3) +
-  ggtitle("Day ice breakup") +
   coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
   theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
 ```
@@ -222,18 +176,6 @@ stat_laea %>% # Temperature
   theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
 ```
 
-```{r map-so, fig.height=3, fig.width=7}
-stat_laea %>% # Salinity
-  ggplot(aes(x = xc,  y = yc)) +
-  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  geom_tile(aes(fill = so)) +
-  scale_fill_cmocean("Sal (psu)", name = "haline", na.value = "red") +
-  facet_wrap(~ year, ncol = 3) +
-  ggtitle("Salinity at 380 m depth") +
-  coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
-  theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
-```
-
 ```{r map-velocity, fig.height=3, fig.width=7}
 stat_laea %>% # Ice concentration
   ggplot(aes(x = xc,  y = yc)) +
@@ -246,23 +188,11 @@ stat_laea %>% # Ice concentration
   theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
 ```
 
-```{r map-mld, fig.height=3, fig.width=7}
-stat_laea %>% # Mixed layer depth
-  ggplot(aes(x = xc,  y = yc)) +
-  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), fill = "grey80") +
-  geom_tile(aes(fill = mlotst)) +
-  scale_fill_viridis_c("depth (m)", option = "plasma", direction = -1, na.value = "red") +
-  facet_wrap(~ year, ncol = 3) +
-  ggtitle("Mixed layer depth") +
-  coord_fixed(xlim = c(-2600, 1100), ylim = c(-1800, 1900), expand = F) + 
-  theme(axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
-```
-
 # Spatial and interannual variability
 
 ```{r prep-diff}
 SA_diff <- stat_laea %>%
-  dplyr::select(year, IHO_area, SA_int, NASC_int, CM) %>%
+  dplyr::select(year, IHO_area, SA_int_clean, NASC_int, CM) %>%
   mutate(year = factor(year))
 ```
 
@@ -274,10 +204,7 @@ I check whether there are inter-annual and spatial variability in S~A~ and the c
 # Visualize data
 plot_grid(SA_diff %>% 
             ggplot() +
-            geom_boxplot(aes(x = year, y = NASC_int)),
-          SA_diff %>% 
-            ggplot() +
-            geom_boxplot(aes(x = year, y = SA_int)),
+            geom_boxplot(aes(x = year, y = SA_int_clean)),
           SA_diff %>% 
             ggplot() +
             geom_boxplot(aes(x = year, y = CM)))
@@ -286,57 +213,41 @@ plot_grid(SA_diff %>%
 ## Outliers
 SA_diff %>%
   group_by(year) %>%
-  identify_outliers(NASC_int) 
-SA_diff %>%
-  group_by(year) %>%
-  identify_outliers(SA_int) 
+  identify_outliers(SA_int_clean) 
 SA_diff %>%
   group_by(year) %>%
   identify_outliers(CM) 
 SA_diff %>%
   group_by(IHO_area) %>%
-  identify_outliers(NASC_int) 
-SA_diff %>%
-  group_by(IHO_area) %>%
-  identify_outliers(SA_int) 
+  identify_outliers(SA_int_clean) 
 SA_diff %>%
   group_by(IHO_area) %>%
   identify_outliers(CM) 
 
 ## Normality: Checked by looking at the anova residuals with QQ plot
-ggqqplot(SA_diff, "NASC_int", facet.by = "year")
-ggqqplot(SA_diff, "SA_int", facet.by = "year")
+ggqqplot(SA_diff, "SA_int_clean", facet.by = "year")
 ggqqplot(SA_diff, "CM", facet.by = "year")
-ggqqplot(SA_diff, "NASC_int", facet.by = "IHO_area")
-ggqqplot(SA_diff, "SA_int", facet.by = "IHO_area")
+ggqqplot(SA_diff, "SA_int_clean", facet.by = "IHO_area")
 ggqqplot(SA_diff, "CM", facet.by = "IHO_area")
-# Data is fully normal
 
 ## Homogeneity of variance
-plot(lm(NASC_int ~ year, data = SA_diff), 1)
-plot(lm(SA_int ~ year, data = SA_diff), 1)
+plot(lm(SA_int_clean ~ year, data = SA_diff), 1)
 plot(lm(CM ~ year, data = SA_diff), 1)
-plot(lm(NASC_int ~ IHO_area, data = SA_diff), 1)
-plot(lm(SA_int ~ IHO_area, data = SA_diff), 1)
+plot(lm(SA_int_clean ~ IHO_area, data = SA_diff), 1)
 plot(lm(CM ~ IHO_area, data = SA_diff), 1)
 SA_diff %>%
-  levene_test(SA_int ~ year)
-# Not homogenous
+  levene_test(SA_int_clean ~ year)
 ```
 
 I used a non parametric Kruskal-Wallis test to test for interannual and spatial variability because the variance is not homogenous and not very normal.
 
 ```{r all-kruskal-wallis}
 SA_diff %>% # Kruskal wallis interannual difference SA
-  kruskal_test(NASC_int ~ year)
-SA_diff %>% # Kruskal wallis interannual difference SA
-  kruskal_test(SA_int ~ year)
+  kruskal_test(SA_int_clean ~ year)
 SA_diff %>% # Kruskal wallis interannual difference CM
   kruskal_test(CM ~ year)
 SA_diff %>% # Kruskal wallis interannual difference SA
-  kruskal_test(NASC_int ~ IHO_area)
-SA_diff %>% # Kruskal wallis interannual difference SA
-  kruskal_test(SA_int ~ IHO_area)
+  kruskal_test(SA_int_clean ~ IHO_area)
 SA_diff %>% # Kruskal wallis interannual difference CM
   kruskal_test(CM ~ IHO_area)
 ```
@@ -350,10 +261,7 @@ I check whether there are inter-annual variability in S~A~ across years within a
 ```{r area-kruskal-wallis}
 SA_diff %>% # Kruskal wallis interannual difference SA within group
   group_by(IHO_area) %>%
-  kruskal_test(NASC_int ~ year)
-SA_diff %>% # Kruskal wallis interannual difference SA within group
-  group_by(IHO_area) %>%
-  kruskal_test(SA_int ~ year)
+  kruskal_test(SA_int_clean ~ year)
 ```
 
 There was no interannual differences in SA within each region (WAO_BF - H = 4.8395483, *p* = 0.0889; CAA - H = 6.9278752, *p* = 0.0313; BB - H = 0.0968, *p* = 0.0889; DS - H = 0.9470, *p* = 0.0889; EAO - H = 5.0263899, *p* = 0.0810). Therefore, there seems to be no need for a random effect for interannual variability within years.
@@ -364,10 +272,10 @@ There was no interannual differences in SA within each region (WAO_BF - H = 4.83
 
 ```{r GAM-prep}
 SA_df <- stat_laea %>%
-  dplyr::select(year, xc, yc, area, IHO_area, NASC_int, SA_int, velocity, thetao, openwater_duration, ice_week) %>%
+  dplyr::select(year, xc, yc, IHO_area, SA_int_clean, velocity, thetao, openwater_duration, ice_week) %>%
   group_by(IHO_area) %>%
   mutate(year = factor(year),
-         SA_int_n = (SA_int - min(SA_int)) / (max(SA_int) - min(SA_int)),
+         SA_int_n = (SA_int_clean - min(SA_int_clean)) / (max(SA_int_clean) - min(SA_int_clean)),
          v_n = (velocity - min(velocity)) / (max(velocity) - min(velocity)),
          t_n = (thetao - min(thetao)) / (max(thetao) - min(thetao)),
          o_n = (openwater_duration - min(openwater_duration)) / (max(openwater_duration) - min(openwater_duration)),
@@ -382,27 +290,27 @@ SA_df <- stat_laea %>%
 
 Plot data.
 
-```{r plot-data-area, fig.height=8, fig.width=10, message=FALSE}
+```{r plot-data-area, fig.height=6, fig.width=8, message=FALSE}
 plot_grid(SA_df %>%
-            ggplot(aes(x = v, y = SA_int, col = IHO)) +
+            ggplot(aes(x = v, y = SA_int_clean, col = IHO)) +
             geom_point() +
             geom_smooth(method = "lm", se = F, col = "grey20") +
             facet_grid(~ IHO) +
             theme(legend.position = "none"),
           SA_df %>%
-            ggplot(aes(x = t, y = SA_int, col = IHO)) +
+            ggplot(aes(x = t, y = SA_int_clean, col = IHO)) +
             geom_point() +
             geom_smooth(method = "lm", se = F, col = "grey20") +
             facet_grid(~ IHO) +
             theme(legend.position = "none"),
           SA_df %>%
-            ggplot(aes(x = o, y = SA_int, col = IHO)) +
+            ggplot(aes(x = o, y = SA_int_clean, col = IHO)) +
             geom_point() +
             geom_smooth(method = "lm", se = F, col = "grey20") +
             facet_grid(~ IHO) +
             theme(legend.position = "none"),
           SA_df %>%
-            ggplot(aes(x = s, y = SA_int, col = IHO)) +
+            ggplot(aes(x = s, y = SA_int_clean, col = IHO)) +
             geom_point() +
             geom_smooth(method = "lm", se = F, col = "grey20") +
             facet_grid(~ IHO) +
@@ -439,38 +347,32 @@ Check correlations.
 ```{r corr-area}
 corr_EAO <- SA_df %>% # Compute Spearman correlation matrix
   filter(IHO == "EAO") %>%
-  dplyr::select(-year, -xc, -yc, -IHO, -area, -SA_int_n, -v_n, -t_n, -o_n, -s_n) %>%
+  dplyr::select(-year, -xc, -yc, -IHO, -SA_int_n, -v_n, -t_n, -o_n, -s_n) %>%
   cor(., method = "spearman") %>%
   round(., 2)
 ggcorrplot(corr_EAO, type = "lower", lab = T, title = "corr EAO")
 
 corr_BB <- SA_df %>% # Compute Spearman correlation matrix
   filter(IHO == "BB") %>%
-  dplyr::select(-year, -xc, -yc, -IHO, -area, -SA_int_n, -v_n, -t_n, -o_n, -s_n) %>%
+  dplyr::select(-year, -xc, -yc, -IHO, -SA_int_n, -v_n, -t_n, -o_n, -s_n) %>%
   cor(., method = "spearman") %>%
   round(., 2)
 ggcorrplot(corr_BB, type = "lower", lab = T, title = "corr BB")
 
 corr_DS <- SA_df %>% # Compute Spearman correlation matrix
   filter(IHO == "DS") %>%
-  dplyr::select(-year, -xc, -yc, -IHO, -area, -SA_int_n, -v_n, -t_n, -o_n, -s_n) %>%
+  dplyr::select(-year, -xc, -yc, -IHO, -SA_int_n, -v_n, -t_n, -o_n, -s_n) %>%
   cor(., method = "spearman") %>%
   round(., 2)
 ggcorrplot(corr_DS, type = "lower", lab = T, title = "corr BB")
 
-corr_WAO <- SA_df %>% # Compute Spearman correlation matrix
-  filter(IHO == "WAO_BF") %>%
-  dplyr::select(-year, -xc, -yc, -IHO, -area, -SA_int_n, -v_n, -t_n, -o_n, -s_n) %>%
+corr_WAO_BF_CAA <- SA_df %>% # Compute Spearman correlation matrix
+  filter(IHO == "WAO_BF_CAA") %>%
+  dplyr::select(-year, -xc, -yc, -IHO, -SA_int_n, -v_n, -t_n, -o_n, -s_n) %>%
   cor(., method = "spearman") %>%
   round(., 2)
-ggcorrplot(corr_WAO, type = "lower", lab = T, title = "corr WAO")
+ggcorrplot(corr_WAO_BF_CAA, type = "lower", lab = T, title = "corr WAO")
 
-corr_CAA <- SA_df %>% # Compute Spearman correlation matrix
-  filter(IHO == "CAA") %>%
-  dplyr::select(-year, -xc, -yc, -IHO, -area, -SA_int_n, -v_n, -t_n, -o_n, -s_n) %>%
-  cor(., method = "spearman") %>%
-  round(., 2)
-ggcorrplot(corr_CAA, type = "lower", lab = T, title = "corr CAA")
 ```
 
 ## Model fitting
@@ -485,16 +387,16 @@ GAM1 <- gam(SA_int_n ~ s(v, k = 5, bs = "tp") + s(t, k = 5, bs = "tp") + s(o, k 
 GAM2 <- gam(SA_int_n ~ s(v, IHO, bs = "fs", k = 5) + s(t, IHO, bs = "fs", k = 5) + s(o, IHO, bs = "fs", k = 5), 
             data = SA_df, family = "gaussian", method = "REML")
 # Model I
-GAM3 <- gam(SA_int_n ~ s(v, by = IHO, k = 5, bs = "tp") + s(t, by = IHO, k = 5, bs = "tp") + 
-              s(o, by = IHO, k = 5, bs = "tp") + s(IHO, bs = "re"),
+GAM3 <- gam(SA_int_n ~ IHO + s(v, by = IHO, k = 5, bs = "tp") + s(t, by = IHO, k = 5, bs = "tp") + 
+              s(o, by = IHO, k = 5, bs = "tp"),
             data = SA_df, family = "gaussian", method = "REML")
 # Model GS
-GAM4 <- gam(SA_int_n ~ s(v, k = 5) + s(t, k = 5) + s(o, k = 5) + s(v, IHO, bs = "fs", k = 5) + 
-              s(t_n, IHO, bs = "fs", k = 5) + s(o_n, IHO, bs = "fs", k = 5),
+GAM4 <- gam(SA_int_n ~ IHO + s(v, k = 5) + s(t, k = 5) + s(o, k = 5) + s(v, IHO, bs = "fs", k = 5) +
+              s(t, IHO, bs = "fs", k = 5) + s(o, IHO, bs = "fs", k = 5),
             data = SA_df, family = "gaussian", method = "REML")
 # Model GI
-GAM5 <- gam(SA_int_n ~ s(v, k = 5) + s(t, k = 5) + s(o, k = 5) + s(v, by = IHO, k = 5, bs = "tp") + 
-              s(t, by = IHO, k = 5, bs = "tp") + s(o, by = IHO, k = 5, bs = "tp") + s(IHO, bs = "re"),
+GAM5 <- gam(SA_int_n ~ IHO + s(v, k = 5) + s(t, k = 5) + s(o, k = 5) + s(v, by = IHO, k = 5, bs = "tp") + 
+              s(t, by = IHO, k = 5, bs = "tp") + s(o, by = IHO, k = 5, bs = "tp"),
             data = SA_df, family = "gaussian", method = "REML")
 
 # Summary metrics
@@ -522,10 +424,10 @@ summ_GAM <- data.frame(model = c("GAM1", "GAM2", "GAM3", "GAM4", "GAM5"),
 summ_GAM
 ```
 
-`GAM3` and `GAM5` are the two models with similar performances, although `GAM3` seems to perform slightly better.
+I select `GAM4 model GS` because I expect to have a similar functional response within each region but that response can vary between region.
 
-```{r summary-GAM3}
-summary(GAM3)
+```{r summary-GAM}
+summary(GAM4)
 ```
 
 ## Model checking
@@ -534,14 +436,15 @@ First I check the basis size k. `k-indexes` are > 1 or close to 1 so the basis s
 
 ```{r basis-size-residuals}
 par(mfrow = c(2, 2))
-gam.check(GAM3, rep = 500)
+gam.check(GAM4, rep = 500)
+worm_plot(GAM4, method = "simulate", point_col = "steelblue", point_alpha = 0.4)
 ```
 
 Check residuals versus covariates.
 
 ```{r residuals-covariates, message=FALSE}
-resid_GAM <- bind_cols(SA_df, residuals.gam(GAM3)) %>%
-  rename(resid = "...17")
+resid_GAM <- bind_cols(SA_df, residuals.gam(GAM4)) %>%
+  rename(resid = "...15")
 plot_grid(resid_GAM %>%
             ggplot(aes(x = v, y = resid)) + 
             geom_hline(yintercept = 0, col = "red") +
@@ -573,111 +476,134 @@ Check auto-correlation wihtin the model. All seems in order.
 
 ```{r acf-pacf}
 par(mfrow = c(1, 2), mar = c(4, 4, 4, 0.5))
-acf(resid(GAM3), lag.max = 36, main = "ACF")
-pacf(resid(GAM3), lag.max = 36, main = "pACF")
+acf(resid(GAM4), main = "ACF")
+pacf(resid(GAM4), main = "pACF")
 ```
 
 ## Model selection
 
-I turn on the double penalty (`select = TRUE`) and check the covariates that has been shrunk. All covariates are imporant in the model. 
+I turn on the double penalty (`select = TRUE`) and check the covariates that has been shrunk. 
 
 ```{r GAM-selection}
-GAM3_p <- gam(SA_int ~ s(v, by = IHO, k = 5, bs = "tp") + s(t, by = IHO, k = 5, bs = "tp") + 
-                s(o, by = IHO, k = 5, bs = "tp") + s(IHO, bs = "re"),
-              data = SA_df, family = "gaussian", method = "REML", select = TRUE)
-summary(GAM3_p)
-```
-
-```{r fig.height=10}
-draw(GAM3_p, scales = "fixed")
+GAM4_p <- gam(SA_int_clean ~ year + s(v, k = 5) + s(t, k = 5) + s(o, k = 5) + s(v, IHO, bs = "fs", k = 5) + 
+              s(t, IHO, bs = "fs", k = 5) + s(o, IHO, bs = "fs", k = 5),
+            data = SA_df, family = "gaussian", method = "REML", select=TRUE)
+summary(GAM4_p)
 ```
 
 ## Model visualization
 
-Quick plots using `visreg`.
+Quick partial effects plot with `gratia::draw`.
 
-```{r plot-GAM3}
-visreg(GAM3, "v", "IHO", overlay = T, scale = "response", band = F, partial = T)
-visreg(GAM3, "t", "IHO", overlay = T, scale = "response", band = F, partial = T)
-visreg(GAM3, "o", "IHO", overlay = T, scale = "response", band = F, partial = T)
+```{r draw-GAM}
+draw(GAM4, residuals = TRUE, scales = "fixed")
 ```
-
 I predict the data and then use that dataframe to plot it in a "clean" way with `ggplot`.
 
-```{r predict-GAM3}
-pred_v <- get_gam_predictions(GAM3, series = v, .comparison = IHO, series_length = 50) %>% 
-  mutate(var = "v",
-         signif = case_when(IHO == "WAO_BF" ~  0.05, # Significance level
-                            IHO == "CAA" ~ 1,
-                            IHO == "BB" ~ 0.01,
-                            IHO == "DS" ~ 0.05,
-                            IHO == "EAO" ~ 1),
-         signif_group = factor(if_else(signif > 0.1, F, T))) %>%
-  rename(idx = ".idx",
-         fit = SA_int_n,
-         value = v)
-pred_t <- get_gam_predictions(GAM3, series = t, .comparison = IHO, series_length = 50) %>%
-  mutate(var = "t",
-         signif = case_when(IHO == "WAO_BF" ~ 0.001, # significance level
-                            IHO == "CAA" ~ 1,
-                            IHO == "BB" ~ 0.001,
-                            IHO == "DS" ~ 1,
-                            IHO == "EAO" ~ 0.01),
-         signif_group = factor(if_else(signif > 0.1, F, T))) %>%
-    rename(idx = ".idx",
-           fit = SA_int_n,
-           value = t)
-pred_o <- get_gam_predictions(GAM3, series = o, .comparison = IHO, series_length = 50) %>%
-  mutate(var = "o", 
-         signif = case_when(IHO == "WAO_BF" ~ 0.01, # significance level
-                            IHO == "CAA" ~ 0.001,
-                            IHO == "BB" ~ 0.001,
-                            IHO == "DS" ~ 1,
-                            IHO == "EAO" ~ 0.05),
-         signif_group = factor(if_else(signif > 0.1, F, T))) %>%
-  rename(idx = ".idx",
-         fit = SA_int_n,
-         value = o)
-# Combine data
-pred_GAM <- bind_rows(pred_v, pred_t, pred_o)
+```{r predict-GAM}
+# Fitted GAMs
+pred_v <- fitted_values(GAM4, terms = c("s(v)", "s(v,IHO)")) %>% # Fit velocity
+  rename(v_fit = fitted, 
+         v_se = se,
+         v_lower = lower,
+         v_upper = upper) 
+pred_t <- fitted_values(GAM4, terms = c("s(t)", "s(t,IHO)")) %>% # Fit temperature
+  rename(t_fit = fitted, 
+         t_se = se,
+         t_lower = lower,
+         t_upper = upper)
+pred_o <- fitted_values(GAM4, terms = c("s(o)", "s(o,IHO)")) %>% # Fit open water
+  rename(o_fit = fitted, 
+         o_se = se,
+         o_lower = lower,
+         o_upper = upper)
+pred_GAM <- left_join(SA_df, pred_v, by = c("IHO", "v", "t", "o")) %>%
+  left_join(., pred_t, by = c("IHO", "v", "t", "o")) %>%
+  left_join(., pred_o, by = c("IHO", "v", "t", "o")) 
 
-# Save data
-save(pred_GAM, GAM3, file = "data/statistics/GAM_results.RData")
+# Partial effects
+part_eff_GAM <- smooth_estimates(GAM4) %>% # Evaluate smooths
+  add_confint()
+part_res_SA <- SA_df %>% # add partial residuals to data
+  add_partial_residuals(GAM4)
+
+# Save predictions
+save(pred_GAM, GAM4, file = "data/statistics/GAM_results.RData")
+
+rm(pred_v, pred_t, pred_o)
 ```
 
-`ggplot` plot.
+Plot fitted GAM with `ggplot`.
 
-```{r ggplot-gam}
-col_pal <- c("#5BBCD6", "#00A08A", "#F2AD00", "#F98400", "#FF0000")# wesanderson::wes_palette("Darjeeling1", type = "discrete") 
+```{r ggplot-GAM, warning=FALSE}
+# col_pal <- c("#5BBCD6", "#00A08A", "#F2AD00", "#F98400", "#FF0000")# wesanderson::wes_palette("Darjeeling1", type = "discrete") 
+col_pal <- c("#5BBCD6",  "#00A08A", "#F98400", "#FF0000")# wesanderson::wes_palette("Darjeeling1", type = "discrete") 
 
-plot_grid(pred_GAM %>%
-            filter(var == "v" & SE < 4) %>%
+GAM_plot <- plot_grid(get_legend(ggplot(data = pred_GAM, aes(x = v, y = v_fit, fill = IHO, col = IHO)) + 
+                                   geom_point() +
+                                   scale_colour_manual(values = col_pal) + 
+                                   scale_fill_manual(values = col_pal) + 
+                                   theme(legend.position = "top", legend.title = element_blank())),
+          plot_grid(
+            pred_GAM %>% # velocity
+              ggplot(aes(x = v)) +
+              geom_ribbon(aes(ymin = v_lower, ymax = v_upper, fill = IHO), alpha = 0.1) +
+              geom_line(aes(y = v_fit, col = IHO), size = 1) +
+              scale_y_continuous(limits = c(0, 1), breaks = seq(0, 1, 0.5)) +
+              scale_colour_manual(values = col_pal) + 
+              scale_fill_manual(values = col_pal) + 
+              labs(x = expression("Velocity at 380 m (cm s"^-1*")"), 
+                   y = expression("S"[A]*"")) + 
+              theme(legend.position = "none"),
+            pred_GAM %>% # temperature
+              ggplot(aes(x = t)) +
+              geom_ribbon(aes(ymin = t_lower, ymax = t_upper, fill = IHO), alpha = 0.1) +
+              geom_line(aes(y = t_fit, col = IHO), size = 1) +
+              scale_y_continuous(limits = c(0, 1), breaks = seq(0, 1, 0.5)) +
+              scale_colour_manual(values = col_pal) + 
+              scale_fill_manual(values = col_pal) + 
+              labs(x = "Temp. at 380 m (°C)", 
+                   y = expression("S"[A]*"")) + 
+              theme(legend.position = "none"),
+            pred_GAM %>% # open water
+              ggplot(aes(x = o)) +
+              geom_ribbon(aes(ymin = o_lower, ymax = o_upper, fill = IHO), alpha = 0.1) +
+              geom_line(aes(y = o_fit, col = IHO), size = 1) +
+              scale_y_continuous(limits = c(0, 1), breaks = seq(0, 1, 0.5)) +
+              scale_colour_manual(values = col_pal) + 
+              scale_fill_manual(values = col_pal) + 
+              labs(x = "Open water (days)", 
+                   y = expression("S"[A]*"")) + 
+              theme(legend.position = "none")), 
+          nrow = 2, rel_heights = c(0.1, 1))
+GAM_plot
+```
+
+Plot partial effects.
+
+```{r partial-effect-plots}
+plot_grid(part_eff_GAM %>%
+            filter(smooth == "s(v)") %>%
             ggplot() +
-            geom_line(aes(x = value, y = fit, col = IHO, linetype = IHO), size = 0.75, alpha = 0.8) +
-            # geom_ribbon(aes(x = value, ymin = CI_lower, ymax = CI_upper, fill = IHO), alpha = 0.1) +
-            scale_colour_manual(name = "IHO", values = col_pal) + 
-            scale_fill_manual(name = "IHO", values = col_pal) + 
-            scale_y_continuous(limits = c(0,1)) +
-            scale_linetype_manual(name = "IHO", values = c(2, 2, 2, 1, 1)) +
-            labs(x = "Velo. 380 m", y = expression("S"[A]*"")),
-          pred_GAM %>%
-            filter(var == "t" & SE < 4) %>%
+            geom_rug(data = part_res_SA, aes(x = v), sides = "b", length = grid::unit(0.02, "npc")) +
+            geom_ribbon(aes(ymin = lower_ci, ymax = upper_ci, x = v), alpha = 0.2) +
+            geom_point(data = part_res_SA, aes(x = v, y = `s(v)`), col = "steelblue3", cex = 1.5) +
+            geom_line(aes(x = v, y = est), lwd = 1.2) +
+            labs(y = "Partial effect"),
+          part_eff_GAM %>%
+            filter(smooth == "s(t)") %>%
             ggplot() +
-            geom_line(aes(x = value, y = fit, col = IHO, linetype = IHO), size = 0.75, alpha = 0.8) +
-            # geom_ribbon(aes(x = value, ymin = CI_lower, ymax = CI_upper, fill = IHO), alpha = 0.1) +
-            scale_colour_manual(name = "IHO", values = col_pal) + 
-            scale_fill_manual(name = "IHO", values = col_pal) + 
-            scale_y_continuous(limits = c(0,1)) +
-            scale_linetype_manual(name = "IHO", values = c(2, 2, 1, 2, 2)) +
-            labs(x = "Temp. 380 m", y = expression("S"[A]*"")),
-          pred_GAM %>%
-            filter(var == "o" & SE < 4) %>%
+            geom_rug(data = part_res_SA, aes(x = t), sides = "b", length = grid::unit(0.02, "npc")) +
+            geom_ribbon(aes(ymin = lower_ci, ymax = upper_ci, x = t), alpha = 0.2) +
+            geom_point(data = part_res_SA, aes(x = t, y = `s(t)`), col = "steelblue3", cex = 1.5) +
+            geom_line(aes(x = t, y = est), lwd = 1.2) +
+            labs(y = "Partial effect"),
+          part_eff_GAM %>%
+            filter(smooth == "s(o)") %>%
             ggplot() +
-            geom_line(aes(x = value, y = fit, col = IHO, linetype = IHO), size = 0.75, alpha = 0.8) +
-            # geom_ribbon(aes(x = value, ymin = CI_lower, ymax = CI_upper, fill = IHO), alpha = 0.1) +
-            scale_colour_manual(name = "IHO", values = col_pal) + 
-            scale_fill_manual(name = "IHO", values = col_pal) + 
-            scale_y_continuous(limits = c(0,1)) +
-            scale_linetype_manual(name = "IHO", values = c(2, 1, 2, 2, 2)) +
-            labs(x = "Open water days", y = expression("S"[A]*"")))
+            geom_rug(data = part_res_SA, aes(x = o), sides = "b", length = grid::unit(0.02, "npc")) +
+            geom_ribbon(aes(ymin = lower_ci, ymax = upper_ci, x = o), alpha = 0.2) +
+            geom_point(data = part_res_SA, aes(x = o, y = `s(o)`), col = "steelblue3", cex = 1.5) +
+            geom_line(aes(x = o, y = est), lwd = 1.2) +
+            labs(y = "Partial effect"))
 ```
